# resolve-ai

./: .gitignore  LICENSE  LLM_with_RAG.ipynb  README.md  eda.ipynb  pyproject.toml  requirements.txt
app/: app-llm.py  app.py  desired_ui.py
app/chroma_db/: chroma.sqlite3
app/chroma_db/6eb422ab-d16b-4018-8e63-73bb402e8316/: index_metadata.pickle
modeling/: arin_nl_exploration.ipynb
modeling/artifacts/: best_binary_model_after_tuning.h5  binary_tokenizer.pkl  tokenizer.pkl
modeling/classifier/: binary-classifier.ipynb  binary_classifier.ipynb  binary_classifier_with_tuning.ipynb
modeling/eda/: eda.ipynb
modeling/exploration/: multiclass-model-POC.ipynb
